src/components/ImageHeader/ImageHeader.module.scss
.imageHeaderContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: clamp(15rem, 38vw, 45rem);
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  border-bottom: 1px solid var(--grey);
}

.pageHeader {
  font-size: clamp(5rem, 5vw, 7rem);
  font-family: "AlegreyaSans", sans-serif;
  letter-spacing: 0.4rem;
  margin-top: -5vw;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: hsla(0, 0%, 100%, 1);
}

.dotDivider {
  font-size: clamp(3rem, 4vw, 6rem);
  line-height: clamp(2rem, 4vw, 4rem);
}

.pageName {
  font-size: clamp(3rem, 2.5vw, 4.5rem);
  font-family: "AlegreyaSans", sans-serif;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: hsla(0, 0%, 100%, 0.66);
}

